Fix the spacing between the last shortcut and the right bracket.
@ferongr

--- a/css/style.css
+++ b/css/style.css
@@ -191,6 +191,9 @@ a[href="javascript:;"] {
   text-decoration: none;
   padding: 1px;
 }
+#shortcuts::after {
+  margin-left: 2px;
+}
 .shortcut:not(:last-child)::after {
   content: " / ";
 }
